--- a/src/styles/Success.css
+++ b/src/styles/Success.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-start; /* keep content at top */
 }
 
 .success-page header {
@@ -33,3 +33,5 @@
   letter-spacing: 1px;
   text-transform: uppercase;
 }
+
+
