--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -33,7 +32,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+.home text button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
