--- a/src/styles/OrderPizza.css
+++ b/src/styles/OrderPizza.css
@@ -1,7 +1,4 @@
-/* Order Pizza Page + global styles provided by user */
-.order-page {
-   padding-top: 1250px;
-}
+
 body {
     margin: 0;
     height: 100vh;
@@ -34,6 +31,7 @@ body {
 }
 
 .header-row {
+    background-color: #FAF7F2;
     padding: 10px;
     width: 100%;
     display: flex;
@@ -43,6 +41,7 @@ body {
     text-align: center;
     max-width: 100%;
     gap: 15px;
+    padding-top: 35px
 }
 .pizza {
     display: flex;
@@ -50,7 +49,6 @@ body {
     align-items: flex-start;
     max-width: 800px;
     margin: 0 auto;
-    padding: 0 20px;
 }
 
 .pizza h2 {
@@ -96,6 +94,7 @@ body {
     text-align: left;
     color: #5F5F5F;
     font-weight: 400;
+    margin-bottom: 30px;
 }
 
 .pizza-form {
@@ -122,7 +121,7 @@ body {
     font-weight: 500;
 }
 
-h4:not(.optional):after {
+.pizza-form h4:not(.optional):after {
     content: "*";
     color: red;
     margin-left: 5px;
