--- a/src/styles/Success.css
+++ b/src/styles/Success.css
@@ -114,7 +114,7 @@ h1 {
   font-size: 1rem;
 }
 
-.order-summary {
+.suc-order-summary {
   border: 1px solid #fff;
   border-radius: 5px;
   padding: 1.5rem;
